operations/kubernetes/overlays/prod/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookcars-frontend-ingress
  namespace: bookcars
spec:
  tls:
    - hosts:
        - book.carii.org
      secretName: wildcard-secret
  rules:
    - host: book.carii.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bc-frontend
                port:
                  number: 80
